# agentic-eval-harness

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DECISIONS.md  SPEC.md  recorded-run.tape
examples/recorded-run/: run.json
loop/: DEPLOY_READY.md  DONE.md  LOOP_STATE.md
plan/: EXECUTION_PLAN.md
prompts/: criteria.json  ideate.exemplar.md  ideate.md  implement.exemplar.md  implement.md  plan.exemplar.md  plan.md  review.exemplar.md  review.md  spec.exemplar.md  spec.md
src/aeh/: __main__.py  cli.py  demo.py  driver.py  models.py  orchestrator.py  phase_runner.py  preflight.py  renderer.py  state_store.py  worktree_manager.py
src/aeh/eval_gate/: gate.py  judging.py
tests/: conftest.py  test_cli_smoke.py  test_demo.py  test_e2e.py  test_envelope_parse.py  test_gate.py  test_judging_parity.py  test_models.py  test_orchestrator.py  test_phase_runner.py  test_preflight.py  test_prompts.py  test_renderer.py  test_security.py  test_state_store.py  test_worktree_manager.py
tests/fixtures/: judge_responses.json  prompt_snapshot.txt
tests/fixtures/claude_envelopes/: v1-result-key.json  v2-text-key.json
