[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-eval-harness"
version = "0.1.0"
description = "Eval-gated runner for coding agents — drives Claude Code through phases with a cross-vendor decision-support gate."
requires-python = ">=3.11"
dependencies = ["click>=8.1"]

[project.optional-dependencies]
judges = ["anthropic>=0.39", "openai>=1.40", "google-genai>=0.3"]
dev = ["pytest>=8", "pytest-cov"]

[project.scripts]
aeh = "aeh.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aeh"]

# NOTE: data-file packaging (prompts/, examples/recorded-run/ -> aeh/_data/)
# is added in Task 14 once those dirs exist. Until then the demo loads the
# fixture via its repo-relative fallback path, so editable installs work.
